# public/swagger/swagger.json
@@ -46,22 +46,17 @@
                 "operationId": "createBins",
                 "responses": {
                     "200": {
-                        "description": "An paged array of bins",
-                        "headers": {
-                            "x-next": {
-                                "description": "A link to the next page of responses",
+                        "description": "Success",
+                        "content": {
+                            "application/json": {
                                 "schema": {
-                                    "type": "string",
                                     "$ref": "#/components/schemas/bins"
                                 }
                             }
                         }
                     },
-                    "201": {
-                        "description": "Null response"
-                    },
-                    "default": {
-                        "description": "unexpected error"
+                    "404": {
+                        "description": "Access denied"
                     }
                 }
             }
@@ -122,8 +117,9 @@
             "bins": {
                 "required": [
                     "id",
-                    "lat",
-                    "long",
+                    "coords",
+                    "city",
+                    "adress",
                     "is_enable",
                     "created_at",
                     "updated_at",
@@ -136,8 +132,7 @@
                         "type": "integer"
                     },
                     "coords": {
-                        "type": "integer",
-                        "format": "int32"
+                        "type": "integer"
                     },
                     "is_enable": {
                         "type": "boolean",
@@ -209,7 +204,10 @@
                         "type": "integer"
                     },
                     "file_json": {
-                        "type": "json"
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        }
                     },
                     "name": {
                         "type": "string",
